# shell-repo

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/shell_repo/: __init__.py
