[project]
name = "shell-repo"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
requires-python = ">=3.13"
dependencies = []

[project.scripts]
shell-repo = "shell_repo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
    "ty>=0.0.1a20",
]
